--- a/docs/_posts/2020-06-24-zap.md
+++ b/docs/_posts/2020-06-24-zap.md
@@ -16,7 +16,7 @@ For our CI purposes we will use a prepackaged [OWASP Zap docker container][zap-c
 
 Developers require fast responses for their builds. Therefore full OWASP Zap scans are not an option for branch or
 Pull-Requests builds, since they take 30 minutes upwards depending on the complexity of your application.
-Nonetheless it is a very good idea to perform small scans in your CI Pipeline too prevent "smaller" security issues
+Nonetheless it is a very good idea to perform small scans in your CI Pipeline to prevent "smaller" security issues
 popping up in a later stage of your deployment pipeline, causing unplanned developer workloads.
 
 For this purpose OWASP Zap comes with a baseline scan mode, which is a timeboxed passive scan intended for use in CI/CD pipelines.
